<resources>
    <string name="app_name">first</string>
    <string name="name">조은지</string>
    <string name="job">Job</string>
    <string name="age">Age</string>
    <string name="signup">회원가입</string>
    <string name="ID">ID</string>
    <string name="PW">PW</string>
    <string name="ok">가입</string>
    <string name="cancel">취소</string>
    <string name="button">Button</string>
    <string name="btn1">버튼1</string>
    <string name="btn2">버튼2</string>
    <string name="textview">버튼을 눌러보세요</string>
    <string name="explain">안녕하세요. 반가워용</string>
    <string name="day">21.3.4</string>
    <string name="img" />
    <string name="fiveBTN">five</string>
    <string name="fourBTN">four</string>
    <string name="threeBTN">three</string>
    <string name="twoBTN">two</string>
    <string name="oneBTN">one</string>
</resources>