<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView15"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="#FDD835"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:text="@string/PW" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:background="#039BE5"
            android:text="@string/ID" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#C0CA33"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveBTN" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FB8C00"
            android:text="@string/explain" />
    </TableRow>
</TableLayout>